# build-dev

./: .gitmodules  README.md
autotools/: Makefile.am  bootstrap.sh  configure.ac
autotools/include/: hello.h
autotools/src/: hello.cc  hello_world.cc  hello_world2.f90
bazel/: makefile
bazel/hello-cxx/: makefile
bazel/hello-cxx/main/: BUILD
bazel/hello-java/: BUILD  makefile
bazel/hello-java/bootstrap/: bootstrap.sh
bazel/hello-lisp/: WORKSPACE  lisp.WORKSPACE.bzl  makefile
bazel/hello-lisp/hello/: WORKSPACE  makefile
cargo/: bootstrap.sh  makefile
cargo/hello/: Cargo.toml  makefile
cmake/hello-cxx/: CMakeLists.txt
cmake/hello-cxx/src-app/: hello-time.cc  hello-world.cc
cmake/hello-cxx/src-lib/: hello-greet.cc
stack/: bootstrap.sh  makefile
stack/hello/: makefile
stack/hello/.stack-work/install/x86_64-linux/lts-8.13/8.0.2/flag-cache/: hello-0.1.0.0-KwseWZXCZph1LcfBbJuRhm
stack/hello/.stack-work/install/x86_64-linux/lts-8.13/8.0.2/pkgdb/: hello-0.1.0.0-KwseWZXCZph1LcfBbJuRhm.conf  package.cache
